--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ronkzoo</groupId>
-    <artifactId>Ronkzoo</artifactId>
+    <artifactId>Church</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Ronkzoo Maven Webapp</name>
+    <name>Church Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -152,6 +152,12 @@
             <version>1.2.3</version>
         </dependency>
         <!--/Mybatis-->
+
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-extras</artifactId>
+            <version>3.0.5</version>
+        </dependency>
 
     </dependencies>
 
