--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>
-                WEB-INF/conf/spring/dispatcher-servlet.xml
+               /WEB-INF/conf/spring/*.xml
             </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
