--- a/pom.xml
+++ b/pom.xml
@@ -32,19 +32,6 @@
         <commons-fileupload.version>1.3</commons-fileupload.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>egovframe</id>
-            <url>http://www.egovframe.go.kr/maven/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
     <dependencies>
 
         <dependency>
@@ -115,6 +102,12 @@
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-oxm-tiger</artifactId>
+            <version>1.5.4</version>
         </dependency>
 
         <dependency>
@@ -196,7 +189,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.1</version>
         </dependency>
-
 
         <dependency>
             <groupId>joda-time</groupId>
